<!--
  ~ Copyright 2016 Red Hat, Inc. and/or its affiliates
  ~ and other contributors as indicated by the @author tags.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">

    <version>24.0.5</version>
    <name>Keycloak Throwback Register Listener</name>
    <description>Listens for user registrations</description>
    <modelVersion>4.0.0</modelVersion>

    <groupId>burgerspace.net</groupId>


    <artifactId>throwback-keycloak-listener</artifactId>
    <packaging>jar</packaging>

    <licenses>
        <license>
            <name>Apache License, Version 2.0.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <version.keycloak>24.0.5</version.keycloak>
        <servlet.api.30.version>1.0.2.Final</servlet.api.30.version>
        <jboss-jaxrs-api_2.1_spec>1.0.1.Final</jboss-jaxrs-api_2.1_spec>
        <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
        <version.war.maven.plugin>3.3.2</version.war.maven.plugin>
        <version.surefire.plugin>3.0.0-M7</version.surefire.plugin>
        <version.failsafe.plugin>3.0.0-M7</version.failsafe.plugin>
        <version.exec.maven.plugin>1.6.0</version.exec.maven.plugin>
        <version.antrun.maven.plugin>1.8</version.antrun.maven.plugin>
        <version.frontend.maven.plugin>1.4</version.frontend.maven.plugin>
        <version.resources.maven.plugin>3.0.2</version.resources.maven.plugin>
        <version.compiler.maven.plugin>3.1</version.compiler.maven.plugin>

        <version.junit>4.12</version.junit>
        <version.hamcrest>1.3</version.hamcrest>
        <version.creaper>1.6.1</version.creaper>
        <version.shrinkwrap.resolvers>3.1.4</version.shrinkwrap.resolvers>
        <version.jee.jaxb.api>2.3.1</version.jee.jaxb.api>

        <arquillian-managed>true</arquillian-managed>
        <version.wildfly.maven.plugin>4.1.1.Final</version.wildfly.maven.plugin>
        <jboss-cli.executable>./jboss-cli.sh</jboss-cli.executable>
        <keycloak.management.port>10090</keycloak.management.port>
        <selenium-bom.version>3.11.0</selenium-bom.version>
        <arquillian-drone-bom.version>2.5.1</arquillian-drone-bom.version>
        <version.json.javax>1.1.2</version.json.javax>
        <version.yasson>1.0.8</version.yasson>
        <version.jackson>2.14.2</version.jackson>
        <org.jboss.galleon.version>5.2.2.Final</org.jboss.galleon.version>

        <version.wildfly>30.0.0.Final</version.wildfly>
        <version.jakarta.ws.rs-api>3.1.0</version.jakarta.ws.rs-api>
        <arquillian-graphene.version>2.5.4</arquillian-graphene.version>
        <arquillian-bom.version>1.7.1.Final</arquillian-bom.version>
        <version.jackson>2.14.2</version.jackson>
        <version.wildfly.arquillian.container>4.0.0.Alpha6</version.wildfly.arquillian.container>

        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.compiler.maven.plugin>3.5.1</version.compiler.maven.plugin>
        <version.hibernate.javax.persistence>1.0.0.Final</version.hibernate.javax.persistence>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.keycloak</groupId>
            <artifactId>keycloak-policy-enforcer</artifactId>
            <version>${version.keycloak}</version>
        </dependency>
        <dependency>
            <groupId>org.keycloak</groupId>
            <artifactId>keycloak-common</artifactId>
            <version>${version.keycloak}</version>
        </dependency>
        <dependency>
            <groupId>org.keycloak</groupId>
            <artifactId>keycloak-admin-client</artifactId>
            <version>${version.keycloak}</version>
        </dependency>
        <dependency>
            <groupId>org.keycloak</groupId>
            <artifactId>keycloak-admin-client-jee</artifactId>
            <version>${version.keycloak}</version>
        </dependency>
        <dependency>
            <groupId>org.keycloak</groupId>
            <artifactId>keycloak-test-helper</artifactId>
            <version>${version.keycloak}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.32</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.keycloak</groupId>
            <artifactId>keycloak-core</artifactId>
            <scope>provided</scope>
            <version>${version.keycloak}</version>
        </dependency>
        <dependency>
            <groupId>org.keycloak</groupId>
            <artifactId>keycloak-server-spi</artifactId>
            <scope>provided</scope>
            <version>${version.keycloak}</version>
        </dependency>
        <dependency>
            <groupId>org.keycloak</groupId>
            <artifactId>keycloak-model-jpa</artifactId>
            <version>${version.keycloak}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.keycloak</groupId>
            <artifactId>keycloak-server-spi-private</artifactId>
            <version>${version.keycloak}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>${version.hamcrest}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Only needed for testing by arquillian (ExporterRegistrationHandler requires JEE JAXB) -->
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>${version.jee.jaxb.api}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
            <version>3.1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.12.0</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>jboss</id>
            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${version.failsafe.plugin}</version>
                </plugin>
                <plugin>
                    <groupId>org.wildfly.plugins</groupId>
                    <artifactId>wildfly-maven-plugin</artifactId>
                    <version>${version.wildfly.maven.plugin}</version>
                    <configuration>
                        <skip>true</skip>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>unpack-wildfly</id>
                            <phase>pre-integration-test</phase>
                            <goals>
                                <goal>unpack</goal>
                            </goals>
                            <configuration>
                                <artifactItems>
                                    <artifactItem>
                                        <groupId>org.wildfly</groupId>
                                        <artifactId>wildfly-dist</artifactId>
                                        <version>${version.wildfly}</version>
                                        <type>zip</type>
                                        <outputDirectory>target</outputDirectory>
                                    </artifactItem>
                                </artifactItems>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <skipTests>true</skipTests>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <!-- Needed when running tests on OpenJDK 17  -->
                        <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
                        <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
                        <includes>
                            <include>**/*Test</include>
                        </includes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <finalName>throwback-listener</finalName>
    </build>
</project>
